--- a/Wheelchair_Project.ioc
+++ b/Wheelchair_Project.ioc
@@ -68,8 +68,9 @@ FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SelfRefreshTime1=6
 FMC.WriteRecoveryTime1=4
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK,configUSE_APPLICATION_TASK_TAG,configENABLE_FPU
-FREERTOS.Tasks01=touchGFX,0,4096,TouchGFX_Task,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK,configUSE_APPLICATION_TASK_TAG,configENABLE_FPU,Queues01
+FREERTOS.Queues01=Queue_PPG_IR,16,float64_t,0,Dynamic,NULL,NULL;Queue_PPG_Red,16,float64_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=touchGFX,0,2048,TouchGFX_Task,As weak,NULL,Dynamic,NULL,NULL;taskPPG,-1,1024,PPG_Task,Default,NULL,Dynamic,NULL,NULL;filterTask,1,1024,FilterTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configTOTAL_HEAP_SIZE=32768
 FREERTOS.configUSE_APPLICATION_TASK_TAG=1
@@ -109,87 +110,92 @@ Mcu.IP9=SYS
 Mcu.IPNb=11
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
-Mcu.Pin0=PI8
-Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PF5
-Mcu.Pin11=PF10
-Mcu.Pin12=PH0-OSC_IN (PH0)
-Mcu.Pin13=PH1-OSC_OUT (PH1)
-Mcu.Pin14=PC0
-Mcu.Pin15=PC2_C
-Mcu.Pin16=PC3_C
-Mcu.Pin17=PB1
-Mcu.Pin18=PF11
-Mcu.Pin19=PF12
-Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=PF13
-Mcu.Pin21=PF14
-Mcu.Pin22=PF15
-Mcu.Pin23=PG0
-Mcu.Pin24=PG1
-Mcu.Pin25=PE7
-Mcu.Pin26=PE8
-Mcu.Pin27=PE9
-Mcu.Pin28=PE10
-Mcu.Pin29=PE11
-Mcu.Pin3=PI9
-Mcu.Pin30=PE12
-Mcu.Pin31=PE13
-Mcu.Pin32=PE14
-Mcu.Pin33=PE15
-Mcu.Pin34=PH6
-Mcu.Pin35=PH7
-Mcu.Pin36=PH9
-Mcu.Pin37=PH10
-Mcu.Pin38=PH11
-Mcu.Pin39=PH12
-Mcu.Pin4=PI10
-Mcu.Pin40=PD8
-Mcu.Pin41=PD9
-Mcu.Pin42=PD10
-Mcu.Pin43=PD14
-Mcu.Pin44=PD15
-Mcu.Pin45=PG2
-Mcu.Pin46=PG4
-Mcu.Pin47=PG5
-Mcu.Pin48=PG6
-Mcu.Pin49=PG7
-Mcu.Pin5=PF0
-Mcu.Pin50=PG8
-Mcu.Pin51=PA9
-Mcu.Pin52=PA10
-Mcu.Pin53=PA13 (JTMS/SWDIO)
-Mcu.Pin54=PH13
-Mcu.Pin55=PH14
-Mcu.Pin56=PH15
-Mcu.Pin57=PI0
-Mcu.Pin58=PI1
-Mcu.Pin59=PI2
-Mcu.Pin6=PF1
-Mcu.Pin60=PI3
-Mcu.Pin61=PA14 (JTCK/SWCLK)
-Mcu.Pin62=PD0
-Mcu.Pin63=PD1
-Mcu.Pin64=PG11
-Mcu.Pin65=PG15
-Mcu.Pin66=PB5
-Mcu.Pin67=PE0
-Mcu.Pin68=PE1
-Mcu.Pin69=PI4
-Mcu.Pin7=PF2
-Mcu.Pin70=PI5
-Mcu.Pin71=PI6
-Mcu.Pin72=PI7
-Mcu.Pin73=VP_CRC_VS_CRC
-Mcu.Pin74=VP_DMA2D_VS_DMA2D
-Mcu.Pin75=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin76=VP_SYS_VS_tim6
-Mcu.Pin77=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.23.2
-Mcu.Pin8=PF3
-Mcu.Pin9=PF4
-Mcu.PinsNb=78
-Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2
-Mcu.ThirdPartyNb=1
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PF2
+Mcu.Pin11=PF3
+Mcu.Pin12=PF4
+Mcu.Pin13=PF5
+Mcu.Pin14=PF10
+Mcu.Pin15=PH0-OSC_IN (PH0)
+Mcu.Pin16=PH1-OSC_OUT (PH1)
+Mcu.Pin17=PC0
+Mcu.Pin18=PC2_C
+Mcu.Pin19=PC3_C
+Mcu.Pin2=PE5
+Mcu.Pin20=PB1
+Mcu.Pin21=PF11
+Mcu.Pin22=PF12
+Mcu.Pin23=PF13
+Mcu.Pin24=PF14
+Mcu.Pin25=PF15
+Mcu.Pin26=PG0
+Mcu.Pin27=PG1
+Mcu.Pin28=PE7
+Mcu.Pin29=PE8
+Mcu.Pin3=PI8
+Mcu.Pin30=PE9
+Mcu.Pin31=PE10
+Mcu.Pin32=PE11
+Mcu.Pin33=PE12
+Mcu.Pin34=PE13
+Mcu.Pin35=PE14
+Mcu.Pin36=PE15
+Mcu.Pin37=PH6
+Mcu.Pin38=PH7
+Mcu.Pin39=PH9
+Mcu.Pin4=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin40=PH10
+Mcu.Pin41=PH11
+Mcu.Pin42=PH12
+Mcu.Pin43=PD8
+Mcu.Pin44=PD9
+Mcu.Pin45=PD10
+Mcu.Pin46=PD14
+Mcu.Pin47=PD15
+Mcu.Pin48=PG2
+Mcu.Pin49=PG4
+Mcu.Pin5=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin50=PG5
+Mcu.Pin51=PG6
+Mcu.Pin52=PG7
+Mcu.Pin53=PG8
+Mcu.Pin54=PA9
+Mcu.Pin55=PA10
+Mcu.Pin56=PA13 (JTMS/SWDIO)
+Mcu.Pin57=PH13
+Mcu.Pin58=PH14
+Mcu.Pin59=PH15
+Mcu.Pin6=PI9
+Mcu.Pin60=PI0
+Mcu.Pin61=PI1
+Mcu.Pin62=PI2
+Mcu.Pin63=PI3
+Mcu.Pin64=PA14 (JTCK/SWCLK)
+Mcu.Pin65=PD0
+Mcu.Pin66=PD1
+Mcu.Pin67=PG11
+Mcu.Pin68=PG15
+Mcu.Pin69=PB5
+Mcu.Pin7=PI10
+Mcu.Pin70=PE0
+Mcu.Pin71=PE1
+Mcu.Pin72=PI4
+Mcu.Pin73=PI5
+Mcu.Pin74=PI6
+Mcu.Pin75=PI7
+Mcu.Pin76=VP_CRC_VS_CRC
+Mcu.Pin77=VP_DMA2D_VS_DMA2D
+Mcu.Pin78=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin79=VP_SYS_VS_tim6
+Mcu.Pin8=PF0
+Mcu.Pin80=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin81=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.23.2
+Mcu.Pin9=PF1
+Mcu.PinsNb=82
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
+Mcu.ThirdParty1=STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2
+Mcu.ThirdPartyNb=2
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
 MxCube.Version=6.11.1
@@ -258,6 +264,25 @@ PE12.Signal=FMC_D9_DA9
 PE13.Signal=FMC_D10_DA10
 PE14.Signal=FMC_D11_DA11
 PE15.Signal=FMC_D12_DA12
+PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE3.GPIO_Label=PPG_SDA
+PE3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PE3.GPIO_PuPd=GPIO_NOPULL
+PE3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PE3.Locked=true
+PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PE4.GPIO_Label=PPG_SCL
+PE4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PE4.GPIO_PuPd=GPIO_NOPULL
+PE4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE5.GPIO_Label=PPG_INT
+PE5.GPIO_PuPd=GPIO_PULLUP
+PE5.Locked=true
+PE5.Signal=GPIO_Input
 PE7.Signal=FMC_D4_DA4
 PE8.Signal=FMC_D5_DA5
 PE9.Signal=FMC_D6_DA6
@@ -595,9 +620,13 @@ SH.FMC_SDNRAS.0=FMC_SDNRAS,13b-sda1
 SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,13b-sda1
 SH.FMC_SDNWE.ConfNb=1
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
 STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.ApplicationCcGraphicsJjApplication=TouchGFXOoGenerator
 STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.GraphicsJjApplication_Checked=true
-STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.IPParameters=tgfx_custom_height,tgfx_pixel_format,tgfx_hardware_accelerator,tgfx_location,tgfx_address1,tgfx_display_interface,ApplicationCcGraphicsJjApplication,tgfx_buffering_strategy,tgfx_address2,tgfx_vsync
+STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.IPParameters=tgfx_custom_height,tgfx_pixel_format,tgfx_hardware_accelerator,tgfx_location,tgfx_address1,tgfx_display_interface,tgfx_buffering_strategy,tgfx_address2,tgfx_vsync,ApplicationCcGraphicsJjApplication
 STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.tgfx_address1=0xC0000000
 STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.tgfx_address2=0xC00BB800
 STMicroelectronics.X-CUBE-TOUCHGFX.4.23.2.tgfx_buffering_strategy=Double
@@ -617,6 +646,8 @@ VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
 VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode=DSPOoLibraryJjLibrary
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.23.2.Mode=GraphicsJjApplication
 VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.23.2.Signal=STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.23.2
 VP_SYS_VS_tim6.Mode=TIM6
